# sirius

./: .gitattributes  Cargo.toml  README.md
client/: Cargo.toml
client/src/: audio.rs  main.rs
data/: .gitignore
kokoro/: Cargo.toml
kokoro/src/tts/: koko.rs
legacy/: audio.rs  main.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs  tts.rs
src/: audio.rs  main.rs  pdfreader.rs  sirius.rs
