[package]
name = "sirius"
version = "0.1.0"
edition = "2021"

[dependencies]
kokoro = { path = "./kokoro" }

tokio = { version = "1.44.2", features = ["io-util", "rt-multi-thread", "io-std"] }
kira = { version = "0.10.6", features = ["wav"] }

hound = { version = "3.5.1" }
lopdf = { version = "0.36.0" }
serde_json = "1.0.140"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.27"
unicode-segmentation = "1.11.0"
