[package]
name = "sirius-client"
version = "0.1.0"
edition = "2021"

[dependencies]
sirius-protocol = { path = "../protocol" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
hound = { workspace = true, version = "3.5.1" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Audio playback
kira = { version = "0.10.6", features = ["wav"] }
rodio = "0.19"

# CLI
clap = { version = "4", features = ["derive"] }
