[package]
name = "sirius-server"
version = "0.1.0"
edition = "2021"

[dependencies]
sirius-protocol = { path = "../protocol" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
hound = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# TTS - adjust path as needed for your kokoro setup
kokoro = { path = "../kokoro" }
